Extended the 11-18-16 blog post.

--- a/_posts/2016-11-18-oops.md
+++ b/_posts/2016-11-18-oops.md
@@ -39,8 +39,18 @@ Note the Planting season entry. I think we won't see any action from these seeds
 
 Also Johnston Seed Company recommends a planting depth ~ 3/4 inch. We spread the seeds on the surface. Presumably we need to put some soil over the seeds now. Oops!
 
+Now Johnston Seed is an Oklahoma company so their recommendations may not be entirely appropriate for Arlington Texas. Will need to discuss with them and also with [Native American Seed][nas].
+
+
+#### Lessons learned
+
+* **Map** the irrigation lines and consult the map before any digging.
+* After **Anything** that could disturb irrigation lines, check them!
+* Find one or more info sources for any plants/seeds used and **read** them.
+
 
 
 [img_1]: /assets/post_images/2016-11-18-oops/low_water_pressure_effect.jpg
 [img_2]: /assets/post_images/2016-11-18-oops/water-from-under-cardboard-layer.jpg
-[jsc]:   http://www.jeinc.com/seed-brochures
+[jsc]:   http://www.jeinc.com/sideoats-grama
+[nas]:   http://www.seedsource.com
